--- a/_posts/2020-03-13-財政預算案.html
+++ b/_posts/2020-03-13-財政預算案.html
@@ -3,7 +3,7 @@ layout: post
 title:  "2020-2021財政預算案"
 date:   2020-03-13 21:03:36 +8000
 categories: 財政預算案
-docurl: assets/pdf/202005/龍門居2020年清洗全苑冷氣工程.pdf
+docurl: /assets/pdf/202005/龍門居2020年清洗全苑冷氣工程.pdf
 ---
 
  <object data="{{ site.baseurl }}{{ page.docurl }}" width="1000" height="1100" type='application/pdf'/> 
